--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ project(
         LANGUAGES CXX)
 
 add_library(${PROJECT_NAME} INTERFACE)
+add_library(sl::rt ALIAS ${PROJECT_NAME})
 target_include_directories(${PROJECT_NAME} INTERFACE include)
 
 add_subdirectory(dependencies)
