--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -2,8 +2,16 @@ cpmaddpackage(
         NAME serious-meta-library
         GIT_REPOSITORY "git@github.com:UsatiyNyan/serious-meta-library.git"
         GIT_TAG main)
+cpmaddpackage(
+        NAME spdlog
+        GIT_REPOSITORY "git@github.com:gabime/spdlog.git"
+        GIT_TAG v1.12.0
+        OPTIONS
+        "SPDLOG_FMT_EXTERNAL ON"
+        )
 
 sl_target_link_system_libraries(${PROJECT_NAME}
         INTERFACE
         serious-meta-library
+        spdlog::spdlog
 )
